--- a/composer.json
+++ b/composer.json
@@ -31,7 +31,9 @@
         "magento/module-widget-sample-data": "100.3.*",
         "magento/module-wishlist-sample-data": "100.3.*",
         "magento/product-community-edition": "2.3.5-p2",
-        "magento/sample-data-media": "100.3.*"
+        "magento/sample-data-media": "100.3.*",
+        "mageplaza/magento-2-blog-extension": "^4.1",
+        "navigate/module-homepage-banner-slider": "1.1.6"
     },
     "require-dev": {
         "allure-framework/allure-phpunit": "~1.2.0",
